--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
      uses: actions/checkout@v2.4.2
    - name: Setup Java JDK
      uses: actions/setup-java@v3.5.0
+     with:
+       java_version: 1.8
    - name: Build with Gradle
      run:  ./gradlew build
    - name: Upload APK
