--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
    - name: Setup Java JDK
      uses: actions/setup-java@v3.5.0
      with:
-       java_version: 1.8
+       java-version: 1.8
    - name: Build with Gradle
      run:  ./gradlew build
    - name: Upload APK
