--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,10 @@ jobs:
    steps:
    - name: Checkout
      uses: actions/checkout@v2.4.2
-   - name: Setup Java JDK
+   - name: Setup JDK
      uses: actions/setup-java@v3.5.0
+     with:
+       java-version: 1.8
    - name: Build with Gradle
      run:  ./gradlew build
    - name: Upload APK
