--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
    - name: Setup JDK
      uses: actions/setup-java@v3.5.0
      with:
-       java-version: 1.8
+       java-version: '11'
+       distribution: 'temurin'
+       cache: gradle
    - name: Build with Gradle
      run:  ./gradlew build
    - name: Upload APK
